<resources>
    <string name="app_name">My Application</string>
    <string name="add_players">Add Players</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="fantasy_fanatics">Fantasy Fanatics</string>
    <string name="confirm">Sign In</string>
    <string name="my_fantasy_teams">My Fantasy Teams</string>
    <string name="add">Add</string>
    <string name="edit_players">Edit Players</string>
    <string name="submit">submit</string>

    <string-array name="teamspinner">
        <item>Placeholder</item>

    </string-array>
    <string name="Submit">Submit</string>
    <string name="button">Button</string>
    <string name="back_button">Back</string>
    <string name="delete_button">Delete</string>
    <string name="add_player">Add Player</string>
    <string name="title_activity_create_user">createUser</string>
    <string name="title_activity_my_teams_page">MyTeamsPage</string>
    <string name="pref">Settings</string>
    <string name="prefswitch">Dark Mode</string>
    <string name="logout">Logout</string>

    <string name="availiabep">NBA Players</string>
    <string name="ff">Freestyle</string>
    <string name="myp">My Players</string>
    <string name="create_team">Create Team</string>
    <string name="team_name">Team Name</string>
    <string name="confirmed">Confirm</string>
    <string name="Splash">SPLASH</string>
    <string name="splash">SPLASH</string>
    <string name="choose_2_teams">Choose 2 Teams</string>
    <string name="match_up">Match UP</string>
    <string name="loading_text">Loading...</string>
    <string name="Scores">GameScore</string>
    <string name="play_a_game">Play a Game</string>
    <string name="scoreboard">ScoreBoard</string>
    <string name="ScoreBoard">Score Board</string>
    <string name="scores">Scores</string>
    <string name="scorestext">Scores</string>
    <string name="textview">TextView</string>
    <string name="gif_lab">Gif Lab</string>
    <string name="next">Next</string>
    <string name="play">Play</string>
    <string name="gifs">GIFS</string>
    <string name="take_picture">Take Picture</string>


    <string-array name="spinner">
        <item>Guard</item>
        <item>Forward-Guard</item>
        <item>Forward-Center</item>
        <item>Guard-Forward</item>
        <item>Center</item>
    </string-array>

</resources>
