<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/createAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="129dp"
        android:layout_marginRight="129dp"
        android:text="@string/create_account"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <EditText
        android:id="@+id/emailInputCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createAccountText"
        android:autofillHints="email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:ems="10"
       tools:targetApi="o" />

    <EditText
        android:id="@+id/passwordInputCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailInputCreateAccount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:autofillHints="password"
        android:ems="10"

        android:hint="@string/password"
         tools:targetApi="o"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/confirmCreateAccount"
        android:layout_width="178dp"
        android:layout_height="78dp"
        android:layout_below="@+id/passwordInputCreateAccount"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="118dp"
        android:layout_marginRight="118dp"
        android:text="@string/confirm" />

</RelativeLayout>