<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent"

    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="130dp"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:text="@string/create_team"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <EditText
        android:id="@+id/usernameInputCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:autofillHints="Username"
        android:ems="10"
        android:hint="@string/team_name"
        android:inputType="text"
        tools:targetApi="o" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameInputCreateAccount"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="85dp"
        android:text="@string/confirmed" />
</RelativeLayout>