<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@drawable/basketballnight">

    <TextView
        android:id="@+id/createAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="73dp"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold"
        
        />

    <EditText
        android:id="@+id/emailInputCreateAccount"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createAccountText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:autofillHints="email"
        android:ems="10"
        android:backgroundTint="@color/colorAccentNight"
        android:textCursorDrawable="@color/colorAccentNight"
        android:textColor="@color/colorAccentNight"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColorHint="@color/colorAccentNight"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/teamNameInputAddPlayer"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailInputCreateAccount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:autofillHints="Username"
        android:ems="10"
        android:textCursorDrawable="@color/colorAccentNight"

        android:textColor="@color/colorAccentNight"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColorHint="@color/colorAccentNight"
        android:hint="UserName"
        android:backgroundTint="@color/colorAccentNight"

        android:inputType="text"
        android:textAlignment="center"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/passwordInputCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teamNameInputAddPlayer"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/colorAccentNight"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textCursorDrawable="@color/colorAccentNight"

        android:backgroundTint="@color/colorAccentNight"

        android:textColorHint="@color/colorAccentNight"
        android:layout_marginTop="58dp"
        android:autofillHints="password"
        android:ems="10"

        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        tools:targetApi="o" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/passwordInputCreateAccount"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:text="@string/create_account" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:gravity="center"
        style="?android:attr/progressBarStyle"
        android:layout_width="114dp"
        android:layout_height="94dp"
        android:layout_below="@+id/buttonSignUp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:layout_marginBottom="54dp" />

</RelativeLayout>